# Fanum

./: Anchor.toml  Cargo.toml  Readme.md  new_keypair.json  package.json  tsconfig.json
hodl_mobile_app/: App.js  MainTabs.js  app.json  global.js  metro.config.js  package-lock.json  package.json  theme.js
hodl_mobile_app/idl/: hodl_project.json
hodl_mobile_app/screens/: DashboardScreen.tsx  DepositScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx  WithdrawScreen.tsx
hodl_mobile_app/utils/: contract.ts  phantom.ts  solana.ts
programs/hodl_project/: Cargo.toml
programs/hodl_project/src/: lib.rs
tests/: hodl_project.ts
